--- a/src/components/Main/Records/Records.module.css
+++ b/src/components/Main/Records/Records.module.css
@@ -1,3 +1,9 @@
 ﻿.records{
-    
+    display: flex;
+    flex-direction: column;
 }
+/*
+.MuiSelect-select{
+    display: flex !important;
+    align-items: center !important;
+}*/
