--- a/src/components/Main/Transaction/Transaction.module.css
+++ b/src/components/Main/Transaction/Transaction.module.css
@@ -18,3 +18,32 @@
     background: #435191;
     border-radius: 2px;
 }
+.top_block{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-left:19px;
+    margin-bottom: 10px;
+    margin-top: 10px;
+    background-color: #e7e3e3;
+    border-radius: 10px;
+    padding: 5px;
+}
+.month_filter{
+    display: flex;
+    align-items: center;
+}
+.type_filter{
+    display: flex;
+    align-items: center;
+}
+.button{
+    border: none;
+    padding: 10px;
+    border-radius: 10px;
+    background-color: #AF4D4DFF;
+}
+.button:hover{
+    cursor: pointer;
+    background-color: #8F3F3FFF;
+}
